# PFE-Project

./: .gitignore
Isanté-assistant/: README.md  pyproject.toml  workflow_graph.mmd
Isanté-assistant/.langgraph_api/: .langgraph_ops.pckl  store.pckl
Isanté-assistant/langgraph-studio/: langgraph.json  workflow.py
Isanté-assistant/src/Security/: Rules.md
Isanté-assistant/src/agents/: agentstage.py  claimsagent.py  conversationalagent.py  databaseagent.py  finalansweragent.py
Isanté-assistant/src/agents/utils/: email_utils.py  faq_retriever.py  llm.py  postprocess.py  sql_validator.py  summarization.py  token_logs.py  tools.py
Isanté-assistant/src/app/: app.py
Isanté-assistant/src/common/: db_utils.py
Isanté-assistant/src/core/: Configuration.py  memory_manager.py  workflow.py
Isanté-assistant/src/models/: adherent_memory.py  medecin_memory.py
Isanté-assistant/templates/: dashboard_home.html
data/: adherents.csv  agents.csv  dossiers.csv  malades_en_charge.csv  nettoie_reclamations.py  rag_csv_index.py  reclamations.csv  reclamations_nettoyees.csv  reclamations_nettoyees_clean.csv  reclamations_rag_minimal.csv  reclamations_resolues.csv  remboursements.csv  tiers_payant.csv
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: About.tsx  AdherentDashboard.tsx  ChatInterface.tsx  Footer.tsx  Header.tsx  Hero.tsx  LoginPage.tsx  MedecinDashboard.tsx  SettingsPage.tsx
smart Backend/project.backend/: pom.xml
smart Backend/project.backend/src/main/java/com/example/project/backend/: Application.java
smart Backend/project.backend/src/main/java/com/example/project/backend/configurations/: SecurityConfig.java  UserUserDetails.java  UserUserDetailsService.java
smart Backend/project.backend/src/main/java/com/example/project/backend/controllers/: AdherentController.java  AuthController.java  DossierController.java  MaladeEnChargeController.java  MedecinController.java  ReclamationController.java  RemboursementController.java
smart Backend/project.backend/src/main/java/com/example/project/backend/dto/: AuthRequest.java
smart Backend/project.backend/src/main/java/com/example/project/backend/entity/: Adherent.java  Agent.java  Dossier.java  MaladeEnCharge.java  Medecin.java  Reclamation.java  ReclamationResolu.java  Remboursement.java  User.java
smart Backend/project.backend/src/main/java/com/example/project/backend/enums/: StatusReclamation.java  UserRole.java
smart Backend/project.backend/src/main/resources/: application.properties
(+21 files in other folders)
